correct menu window z-index

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,6 @@
 
 @media (min-width: 1440px) {
   .container {
-    max-width: 1200px;
+    max-width: 1216px;
   }
 }
