--- a/src/components/main/result/DailyForecast/DailyForecastBox.module.css
+++ b/src/components/main/result/DailyForecast/DailyForecastBox.module.css
@@ -7,7 +7,7 @@
   border: 1px solid var(--color_4);
   border-radius: 12px;
   width: 30%;
-  padding: calc(10rem / 16) calc(16rem / 16);
+  padding: calc(16rem / 16) calc(10rem / 16);
 }
 .daily_forecast_box_day {
   color: var(--color_6);
@@ -40,17 +40,13 @@
 
 @media (min-width: 768px) {
   .daily_forecast_box_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: var(--color_3);
-    border: 1px solid var(--color_4);
-    border-radius: 12px;
     width: 12%;
-    padding: calc(10rem / 16) calc(16rem / 16);
   }
 }
 
 @media (min-width: 1440px) {
+  .daily_forecast_box_container {
+    width: calc(97rem/16);
+  }
 }
+
